# kelvins-weekly

./: .envrc  .gitignore  IMPLEMENTATION_PLAN.md  eslint.config.js  landingpagePlan.md  openai-dev.html  package-lock.json  package.json  sources.md  svelte.config.js
.claude/commands/: anthropic-news.md  devto-top.md  gh-trending.md  hn-top.md  pg-essays.md  spotify-podcasts.md  what-is-the-point.md  yizy-journalist.md  yt-recent.md
scripts/: getDevToTopForPastWeek.sh  getGHTrendingForPastWeek.sh  getPGEssays.sh  getSpotifyPodcastsForPastWeek.sh  getSubscribedYTVideosForPastWeek.sh  getTopHNForPastWeek.sh  spotify-shows.txt  youtube-channels.txt
scripts/feed_aggregator/: draft.json  main.py  pyproject.toml
scripts/feed_aggregator/feed_aggregator.egg-info/: PKG-INFO  SOURCES.txt
scripts/feed_aggregator/output/: 2026-03-01.json
scripts/feed_aggregator/sources/: blogs.py  claude_blog.py  devto.py  gh_trending.py  hn.py  pg_essays.py  spotify.py  youtube.py
src/: app.css  app.html
src/lib/: types.ts
src/lib/components/: ArticleList.svelte  AsciiTitle.svelte  HeadlineVideo.svelte  KelvinsPick.svelte  KelvinsPickTag.svelte  NewspaperHeader.svelte  PodcastSection.svelte  RepoList.svelte  Sidebar.svelte  StampIcon.svelte
src/lib/data/: 2026-02-16.json  2026-02-23.json  2026-03-01.json  2026-03-08.json  2026-03-15.json  2026-03-22.json  2026-03-29.json  2026-04-05.json  2026-04-12.json  index.ts
src/routes/: +layout.svelte
src/routes/(app)/: +layout.svelte  (+1 more)
theme/: exploration.md  implementation-plan.md
yizy-journalist/: 2026-02-25.json  2026-02-26.json
(+14 files in other folders)
